--- a/packages/client/src/styles/globals.scss
+++ b/packages/client/src/styles/globals.scss
@@ -53,3 +53,13 @@ td {
     @apply text-lg;
   }
 }
+
+.modal-buttons-grid {
+  @apply grid gap-1;
+  grid-template-columns: repeat(auto-fill, minmax(min(13rem, 100%), 1fr));
+}
+
+.status-buttons-grid {
+  @apply grid gap-1;
+  grid-template-columns: repeat(auto-fill, minmax(min(5rem, 100%), 1fr));
+}
