:tada: fix more bugs

--- a/packages/client/src/styles/globals.scss
+++ b/packages/client/src/styles/globals.scss
@@ -64,6 +64,5 @@ td {
 }
 
 .status-buttons-grid {
-  @apply grid gap-1;
-  grid-template-columns: repeat(auto-fill, minmax(min(5rem, 100%), 1fr));
+  @apply flex gap-1 flex-grow flex-wrap;
 }
