:tada: initial react-table migration

--- a/packages/client/src/styles/globals.scss
+++ b/packages/client/src/styles/globals.scss
@@ -80,3 +80,7 @@ td {
 .switch-component[data-state="unchecked"] {
   transform: translateX(3px);
 }
+
+.thin-scrollbar {
+  scrollbar-width: thin;
+}
