--- a/packages/client/src/styles/globals.scss
+++ b/packages/client/src/styles/globals.scss
@@ -83,3 +83,19 @@ th {
 .thin-scrollbar {
   scrollbar-width: thin;
 }
+
+.dropdown-fade {
+  transform-origin: top left;
+  animation: dropdownFade 100ms ease-out;
+}
+
+@keyframes dropdownFade {
+  from {
+    opacity: 0;
+    transform: scale(95%);
+  }
+  to {
+    opacity: 1;
+    transform: scale(100%);
+  }
+}
