:bug: fix: several bug fixes (closes #204)

--- a/packages/client/src/styles/globals.scss
+++ b/packages/client/src/styles/globals.scss
@@ -84,8 +84,15 @@ th {
 }
 
 .dropdown-fade {
-  transform-origin: top left;
   animation: dropdownFade 100ms ease-out;
+}
+
+.dropdown-fade[data-side="left"] {
+  transform-origin: top right;
+}
+
+.dropdown-fade[data-side="right"] {
+  transform-origin: top left;
 }
 
 @keyframes dropdownFade {
