:tada: feat: hide disabled features (closes #210)

--- a/packages/client/src/styles/globals.scss
+++ b/packages/client/src/styles/globals.scss
@@ -83,16 +83,18 @@ th {
   scrollbar-width: thin;
 }
 
-.dropdown-fade {
-  animation: dropdownFade 100ms ease-out;
-}
-
+.dropdown-right,
 .dropdown-fade[data-side="left"] {
   transform-origin: top right;
 }
 
+.dropdown-left,
 .dropdown-fade[data-side="right"] {
   transform-origin: top left;
+}
+
+.dropdown-fade {
+  animation: dropdownFade 100ms ease-out;
 }
 
 @keyframes dropdownFade {
