:tada: feat: editor upgrades

--- a/packages/client/src/styles/globals.scss
+++ b/packages/client/src/styles/globals.scss
@@ -26,6 +26,11 @@ li {
   @apply text-lg;
 }
 
+[data-list-item="true"]::before {
+  content: "•";
+  padding: 0 5px ;
+}
+
 table {
   @apply w-full overflow-auto;
 }
