:tada: feat: more minor improvements

--- a/packages/client/src/styles/globals.scss
+++ b/packages/client/src/styles/globals.scss
@@ -45,10 +45,10 @@ th {
   @apply p-2 px-3 font-semibold bg-gray-200 dark:bg-gray-3 lg:table-cell text-left select-none;
 
   &:first-child {
-    @apply rounded-tl-md rounded-bl-md;
+    @apply rounded-tl-md ;
   }
   &:last-child {
-    @apply rounded-tr-md rounded-br-md;
+    @apply rounded-tr-md ;
   }
 }
 
