:tada: feat: start on responsive admin dashboard

--- a/packages/client/src/styles/globals.scss
+++ b/packages/client/src/styles/globals.scss
@@ -126,3 +126,13 @@ th {
     transform: scale(100%);
   }
 }
+
+.admin-dashboard-responsive {
+  width: calc(100vw - 50px);
+}
+
+@media (min-width: 900px) {
+  .admin-dashboard-responsive {
+    width: calc(100vw - 330px);
+  }
+}
