:tada: feat: able to view officer qualifications

--- a/packages/client/src/styles/globals.scss
+++ b/packages/client/src/styles/globals.scss
@@ -92,7 +92,7 @@ li {
 }
 
 .dropdown-fade {
-  animation: dropdownFade 100ms ease-out;
+  animation: dropdownFade 100ms ease-out forwards;
 }
 
 @keyframes dropdownFade {
