--- a/packages/client/src/styles/globals.scss
+++ b/packages/client/src/styles/globals.scss
@@ -31,7 +31,7 @@ html {
   }
 
   .truncate-custom-non-card {
-    @apply bg-white dark:border-quinary dark:bg-primary;
+    @apply bg-white dark:bg-primary;
   }
 
   .truncate-custom::after {
